--- a/index.html
+++ b/index.html
@@ -20,5 +20,54 @@
         <a href="#">Log in</a>
       </div>
     </header>
+    <div class="top-wrapper">
+      <div class="container">
+        <h1> Toko Buku Progate <h1>
+        <p> Menyediakan pilihan buku dengan harga murah, baik buku lokal maupun import </P>
+        <div class="btn-wrapper">
+          <a href="#" class="btn Login"> Login </a>
+          <a href="#" class="btn Signup"> Signup </a>
+        </div>
+      </div>
+    </div>
+    <div class="content-wrapper">
+      <div class="container">
+        <div class="heading">
+          <h2> Cari apa yang kamu mau </h2>
+        </div>
+        <div class="contents">
+          <div class="content">
+            <div class="content-icon">
+              <img src="Bulan.jpg" class="foto">
+            </div>
+            <p> Terbaru </p>
+          </div>
+          <div class="content">
+            <div class="content-icon">
+              <img src="critical.jpg" class="foto">
+            </div>
+            <p> Terpopuler </p>
+          </div>
+          <div class="content">
+            <div class="content-icon">
+              <img src="hp.jpg" class="foto">
+            </div>
+            <p> Impor </p>
+          </div>
+          <div class="content">
+            <div class="content-icon">
+              <img src="kapal.jpg" class="foto">
+            </div>
+            <p> Diskon </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="message-wrapper">
+      <div class="container">
+        <h3> Daftar sekarang untuk mendapatkan diskon <span> 30% </span> . <h3>
+        <span class="btn message">Signup</span>
+      </div>
+    </div>
   </body>
 </html>
